maven version change